# PANARCHY

./: Cargo.toml  PHASE0_SUMMARY.md  README.md
benches/: phase0_bench.rs
output/tiny_island/snapshot_00000030/: metadata.json
output/tiny_island/snapshot_00000060/: metadata.json
output/tiny_island/snapshot_00000090/: metadata.json
scenarios/: tiny_island.yaml
src/: components.rs  config.rs  engine.rs  lib.rs  main.rs  rng.rs  scenario.rs  snapshot.rs  technology.rs  world.rs
src/config/: mod.rs
src/ecs/: component.rs  entity.rs  mod.rs  world.rs
src/engine/: mod.rs
src/rng/: mod.rs
src/scheduler/: mod.rs
src/snapshot/: mod.rs
src/spatial/: mod.rs
src/systems/: bookkeeping.rs  economy.rs  environment.rs  finance.rs  infrastructure.rs  mod.rs  policy.rs  population.rs  technology.rs
src/web/: assets.rs  mod.rs
src/web/assets/: app.js  index.html  styles.css
tests/: engine_hook.rs  integration_test.rs  phase0.rs  phase1.rs  phase2.rs  phase3.rs
