[package]
name = "panarchy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Deterministic RNG
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Performance and optimization
rayon = "1.8"

# Time and logging
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
